--- a/index.html
+++ b/index.html
@@ -1,19 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>wo80 . GitHub Pages</title>
+	<title>wo80.github.io</title>
 
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="author" content="Christian Woltering" />
-	<meta name="keywords" content="wo80, Christian Woltering, GitHub Pages" />
-	<meta name="description" content="GitHub pages hosting wo80 webapp demos and other stuff." />
-	<!--
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<link type="text/css" rel="stylesheet" href="style.css" media="screen" />
-	-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="home of wo80 - donation options">
+	<meta name="keywords" content="wo80, support, donation, paypal, bitcoin, ethereum, zcash">
+	<meta name="author" content="wo80">
+
+	<link href="/assets/default.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-Test
+
+<div class="center">
+
+<h1>donation options</h1>
+
+<p>Thank you for considering a donation. Any support is highly appreciated and will help me maintaining my open source projects.</p>
+<div class="card">
+	<div class="header">paypal ( EUR/USD )</div>
+	<div class="content">
+	<p>
+	<a href="https://www.paypal.me/cwoltering">https://www.paypal.me/cwoltering</a>
+	</p>
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">ko-fi ( USD via paypal )</div>
+	<div class="content">
+	<p>
+	<a href="https://ko-fi.com/cwoltering">https://ko-fi.com/cwoltering</a>
+	</p>
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">liberapay ( EUR via paypal )</div>
+	<div class="content">
+	<p>
+	<a href="https://liberapay.com/cwoltering">https://liberapay.com/cwoltering</a>
+	</p>
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">buymeacoffee ( USD via paypal )</div>
+	<div class="content">
+	<p>
+	<a href="https://www.buymeacoffee.com/cwoltering">https://www.buymeacoffee.com/cwoltering</a>
+	</p>
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">bitcoin</div>
+	<div class="content flex">
+		<div class="item"><label for="BTC">BTC</label></div>
+		<div class="item item-center"><input type="text" name="BTC" id="BTC" value="3CigyXGt1jX39HMbT1aEP6ngyfQd5ScNnh" /></div>
+		<div class="item"><button class="copy">Copy</button></div>
+		<div class="item"><button class="qr">QR Code</button></div>
+	</div>
+	<div class="qr">
+		<img src="/img/crypto-qr-bitcoin.png" />
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">ethereum</div>
+	<div class="content flex">
+		<div class="item"><label for="ETH">ETH</label></div>
+		<div class="item item-center"><input type="text" name="ETH" id="ETH" value="0x89EA7A9F5D40E66dB24ccf4087e8A86aba488094" /></div>
+		<div class="item"><button class="copy">Copy</button></div>
+		<div class="item"><button class="qr">QR Code</button></div>
+	</div>
+	<div class="qr">
+		<img src="/img/crypto-qr-ether.png" />
+	</div>
+</div>
+
+<div class="card">
+	<div class="header">zcash</div>
+	<div class="content flex">
+		<div class="item"><label for="ZEC">ZEC</label></div>
+		<div class="item item-center"><input type="text" name="ZEC" id="ZEC" value="zs1mq58zlvgmtyq5hv9qne4y9ketncesdkqwe6nzppt2q3xw0yus7m9tezuf29psmxn0klfgwlyr56" /></div>
+		<div class="item"><button class="copy">Copy</button></div>
+		<div class="item"><button class="qr">QR Code</button></div>
+	</div>
+	<div class="qr">
+		<img src="/img/crypto-qr-zcash.png" />
+	</div>
+</div>
+
+</div>
+
+<script>
+
+function copy(b) {
+  let input = b.closest(".content").querySelector('input');
+  if (navigator.clipboard && input) {
+    navigator.clipboard.writeText(input.value);
+  }
+}
+
+function qr(b) {
+  let img = b.closest(".card").querySelector('img');
+
+  if (!img) return;
+
+  let hidden = img.style.display != 'block';
+
+  document.querySelectorAll('.qr > img').forEach(i => {
+    i.style.display = 'none';
+  });
+
+  if (hidden) {
+    img.style.display = 'block';
+  }
+}
+
+// Clipboars API only available on secure hosts.
+let http = window.location.protocol.startsWith('http:');
+
+document.querySelectorAll('button.copy').forEach(b => {
+  b.addEventListener('click', () => copy(b));
+  if (http) b.disabled = true;
+});
+
+document.querySelectorAll('button.qr').forEach(b => {
+  b.addEventListener('click', () => qr(b));
+});
+
+</script>
+
 </body>
 </html>
